syntax = "proto3";
package inner;
option  go_package = "/inner";

import "gogo.proto";



message RoleInfo
{
    string RID     = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    string UID     = 2 ;
    uint64 SId     = 3;
    string Name    = 4;
    string Icon    = 5;
    string Country = 6;
    map<int64,int64> Attributes = 7; // 属性集
    string CreateAt = 8;
    string LoginAt  = 9;
    string LogoutAt = 10;
}

message ItemInfo
{
    string RID     = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    map<int64,int64> Items = 2;
}

message Mail
{
    string UUID            = 1;
    int64  CreateAt        = 2; // 邮件发送时间
    string SenderRoleId    = 3; // 发送者RoleId
    string Name            = 4; // 发送者名字
    string Title           = 5; // 标题
    string Content         = 6; // 正文
    map<int64,int64> Items = 7; // 附件道具
    int32 Status           = 8; // 状态 0.未读 1.已读 2.已领
}

message MailInfo
{
    string RID             = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    map<string,Mail> Mails = 2; // 所有邮件
}